<resources>
    <string name="app_name">Keep Exploring</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="register_now">Register Now!</string>
    <string name="register">Register</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="email">Email:</string>
    <string name="intro">This is a application that designed for Citizen Science Project that used to describe food environment based on geolocation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
